# meridian

./: .gitignore  .railwayignore  .vercelignore  CLAUDE.md  DEPLOY.md  Dockerfile  Procfile  README.md  app.py  nixpacks.toml  pyproject.toml  railpack.toml  railway.json  setup.sh  start.sh  vercel.json
.claude/: settings.local.json
backend/: analyticsv8.0.py  analyticsv8.1.py  analyticsv8.2.py  analyticsv8.3.2.py  analyticsv8.3.py  analyticsv8_3_2.py  analyticsv8_3_3.py  analyticsv8_3_5.py  analyticsv8_3_6.py  authv8.0.py  authv8.1.py  authv8.2.py  authv8_3.py  authv8_3_2.py  authv8_3_3.py  authv8_3_5.py  authv8_3_6.py  databasev8.0.py  databasev8.1.py  databasev8.2.py  databasev8.3.2.py  databasev8.3.3.py  databasev8_3.py  databasev8_3_5.py  databasev8_3_6.py  email_servicev8.0.py  email_servicev8.1.py  email_servicev8.2.py  email_servicev8.3.2.py  email_servicev8.3.3.py  email_servicev8_3.py  email_servicev8_3_2.py  email_servicev8_3_5.py  email_servicev8_3_6.py  encryptionv8.0.py  encryptionv8.1.py  encryptionv8.2.py  encryptionv8_3.py  importjobsv8_3_6.py  indexv8.0.py  (+29 more)
backend/scripts/: serve.py
frontend/: index.html  indexv8.1.html  indexv8.2.html  indexv8.3.1.html  indexv8.3.2.html  indexv8.3.3.html  indexv8.3.html  indexv8_3_2.html
landing/: indexv8.1.html  indexv8.2.html  indexv8_3_2.html
sdk/: README_SDK.md  pyproject.toml
sdk/meridian_sdk/: __init__.py  config.py  ingest.py  proxy.py
