[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "meridian-sdk"
version = "8.1.0"
description = "One-line LLM cost tracking and margin intelligence for AI SaaS"
readme = "README_SDK.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "ai", "observability", "cost", "margin", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://meridianvisual.io"
Documentation = "https://meridianvisual.io/docs"
Repository = "https://github.com/meridianvisual/meridian-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["meridian_sdk*"]
